data/cloudformation_collected_templates_new/template_05402_web-servers.yml
Description: WebServers with EIP
Parameters:
  myVPC:
    Description: VPC used to deploy our resources below
    Type: AWS::EC2::VPC::Id
  PublicSubnet1:
    Description: Subnet to be used for our Web Server
    Type: AWS::EC2::Subnet::Id
  PublicSubnet2:
    Description: Subnet to be used for our Web Server
    Type: AWS::EC2::Subnet::Id
  PrivateSubnet1:
    Description: Subnet to be used for our Web Server
    Type: AWS::EC2::Subnet::Id
  PrivateSubnet2:
    Description: Subnet to be used for our Web Server
    Type: AWS::EC2::Subnet::Id
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
    Type: "AWS::EC2::KeyPair::KeyName"
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
  AMItoUse:
    Description: AMI to use for our base image
    Type: String
Resources:
  # ------------------------------------------------------------------------
  #  Adding web server and security groups
  # -------------------------------------------------------------------------
  # Security Group
  myWebAccessSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http to our test host
      VpcId:
        Ref: myVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  # Instances added to public subnets 1 and 2
  myWebServerInstance1:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      ImageId: !Ref AMItoUse
      NetworkInterfaces:
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          GroupSet:
            - Ref: "myWebAccessSecurityGroup"
          SubnetId:
            Ref: "PublicSubnet1"
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum install -y httpd
          systemctl start httpd

  IPAddress1:
    Type: "AWS::EC2::EIP"

  IPAssoc1:
    Type: "AWS::EC2::EIPAssociation"
    Properties:
      InstanceId: !Ref myWebServerInstance1
      EIP: !Ref IPAddress1

  myWebServerInstance2:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      ImageId: !Ref AMItoUse
      NetworkInterfaces:
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          GroupSet:
            - Ref: "myWebAccessSecurityGroup"
          SubnetId:
            Ref: "PublicSubnet2"
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum install -y httpd
          systemctl start httpd

  IPAddress2:
    Type: "AWS::EC2::EIP"

  IPAssoc2:
    Type: "AWS::EC2::EIPAssociation"
    Properties:
      InstanceId: !Ref myWebServerInstance2
      EIP: !Ref IPAddress2

  # Instances added to private subnets 1 and 2
  myWebServerInstance3:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      ImageId: !Ref AMItoUse
      NetworkInterfaces:
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          GroupSet:
            - Ref: "myWebAccessSecurityGroup"
          SubnetId:
            Ref: "PrivateSubnet1"
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum install -y httpd
          systemctl start httpd

  myWebServerInstance4:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      ImageId: !Ref AMItoUse
      NetworkInterfaces:
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          GroupSet:
            - Ref: "myWebAccessSecurityGroup"
          SubnetId:
            Ref: "PrivateSubnet2"
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum install -y httpd
          systemctl start httpd

Outputs:
  myWebServerInstanceID1:
    Description: InstanceId of the newly created EC2 instance
    Value: !Ref myWebServerInstance1
  myWebServerInstance1IPAddress:
    Description: IP address of the newly created EC2 instance
    Value: !Ref IPAddress1

  myWebServerInstanceID2:
    Description: InstanceId of the newly created EC2 instance
    Value: !Ref myWebServerInstance2
  myWebServerInstance2IPAddress:
    Description: IP address of the newly created EC2 instance
    Value: !Ref IPAddress2

  myWebServerInstanceID3:
    Description: InstanceId of the newly created EC2 instance
    Value: !Ref myWebServerInstance3
  # myWebServerInstance3IPAddress:
  #   Description: IP address of the newly created EC2 instance
  #   Value: !Ref IPAddress3

  myWebServerInstanceID4:
    Description: InstanceId of the newly created EC2 instance
    Value: !Ref myWebServerInstance4
  # myWebServerInstance4IPAddress:
  #   Description: IP address of the newly created EC2 instance
  #   Value: !Ref IPAddress4
